tests/invalid/invalid_regex_annotation_no_quotes.csl
config InvalidRegexAnn {
  name: string @regex(^[a-z]+$);
}
